# weapon-designer

./: .gitignore  .mcp.json  README.md  TODO.md  pyproject.toml
configs/: example_bar.json  example_disk.json  example_eggbeater.json
docs/: ARCHITECTURE.md  OPTIMIZATION.md  report.aux  report.out  report.tex
docs/figures/: figure_fea_verification.py  figure_functional_pod_table.py  figure_jacobian_heatmap.py  figure_pod_contact_table.py  figure_rom_summary.py  figure_speed_pareto.py  figure_spiral_contacts.py  figure_spline_comparison.py
feedback_notes/: chat.md  james.md
poster/: gen_fea_training_cycle.py  gen_gp_fit.py  gen_mode_shapes.py  gen_profile_comparison.py  gen_weapon_archetypes.py  poster.tex
scripts/: apply_mfg.py  build_fea_database.py  build_rom.py  compare_baselines.py  evaluate.py  explore_diverse.py  fea_archetype_sweep.py  fea_replay.py  fea_speed_sweep.py  fine_mesh_spotcheck.py  generate_spiral_dxf_preview.py  landscape_probe.py  plot_convergence.py  plot_pareto.py  plot_shape_distance.py  pod_contact_analysis.py  post_sweep_pipeline.py  run_surrogate_pipeline.py  sensitivity_probe.py  sweep_explore.py  sweep_profiles.py  validate_rom.py  verify_fea.py
tests/: conftest.py  test_bspline_profile.py  test_constraints.py  test_fea.py  test_fea_replay.py  test_geometry.py  test_manufacturability.py  test_objectives.py  test_objectives_enhanced.py  test_optimizer_functional.py  test_parametric.py  test_parametric_cad.py  test_physics.py  test_profile_builder.py  test_profile_splines.py  test_surrogate.py  test_topo_optimizer.py
(+37 files in other folders)
